--- a/ioc/package.json
+++ b/ioc/package.json
@@ -11,5 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "typescript": "^3.9.7"
+  },
+  "devDependencies": {
+    "inversify": "^5.0.1",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.10.2"
   }
 }
